import { render } from '@testing-library/react';
// TODO: Fix in follow-up ticket https://github.com/MetaMask/metamask-extension/issues/31860
// eslint-disable-next-line @typescript-eslint/naming-convention
import React from 'react';

import { ConfirmInfoSection } from './section';

describe('ConfirmInfoSection', () => {
  it('should match snapshot', () => {
    const { container } = render(
      <ConfirmInfoSection>Test Content</ConfirmInfoSection>,
    );
    expect(container).toMatchSnapshot();
  });

  it('should match snapshot without padding', () => {
    const { container } = render(
      <ConfirmInfoSection noPadding>Test Content</ConfirmInfoSection>,
    );
    expect(container).toMatchSnapshot();
  });
});
