// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmInfoSection should match snapshot 1`] = `
<div>
  <div
    class="mb-4 pt-1 pr-2 pb-1 pl-2 bg-section rounded-lg"
  >
    Test Content
  </div>
</div>
`;

exports[`ConfirmInfoSection should match snapshot without padding 1`] = `
<div>
  <div
    class="mb-4 pt-0 pr-0 pb-0 pl-0 bg-section rounded-lg"
  >
    Test Content
  </div>
</div>
`;
